src/tess/tl/test/fail/test_tagged_union_variant_shadows_builtin.tl
#module main

Value: | String
       | Null

main() { 0 }
